--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.tkawachi'
-version '0.0.1-SNAPSHOT'
+version '0.0.1'
 
 apply plugin: 'java'
 
@@ -12,4 +12,8 @@ repositories {
 dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.7'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+if (gradle.startParameter.taskNames.contains('uploadArchives')) {
+    apply from: 'build.publish.gradle'
 }
