--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,35 @@
-group 'com.github.tkawachi'
-version '0.0.2-SNAPSHOT'
+subprojects {
+    group 'com.github.tkawachi'
+    version '0.0.2-SNAPSHOT'
 
-apply plugin: 'java'
+    apply plugin: 'java'
 
-sourceCompatibility = 1.5
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
 
-repositories {
-    mavenCentral()
-}
+    repositories {
+        mavenCentral()
+    }
 
-dependencies {
-    compile 'ch.qos.logback:logback-classic:1.1.7'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.11'
+    }
+
 }
 
 if (gradle.startParameter.taskNames.contains('uploadArchives')) {
     apply from: 'build.publish.gradle'
 }
+
+project(':core') {
+
+}
+
+project(':logback') {
+    dependencies {
+        compile project(':core')
+        compile 'ch.qos.logback:logback-classic:1.1.7'
+    }
+}
+
