--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include 'core', 'logback'
-rootProject.name = 'logback-exhash'
-
+rootProject.name = 'exhash'
+project(':core').name = 'exhash-core'
+project(':logback').name = 'exhash-logback'
